testsuite/poke.pkl/funcall-def-diag-4.pk
/* { dg-do compile } */

defun def = (int a, int b, int c = 0) int:
  {
   return a + b + c;
  }

defun bar = void:
  {
   def (1,2,3,4); /* { dg-error "" } */
  }
